<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="adhoc_not_supported_yet">AdHoc is not supported by Android platform yet!</string>
    <string name="app_name">wifi_demo</string>
    <string name="buttonOp">More…</string>
    <string name="button_change_password">Modify</string>
    <string name="cancel">Cancel</string>
    <string name="color_unspecified">Default</string>
    <string name="confirm">OK</string>
    <string name="connect">Connect</string>
    <string name="crrntConnecsCnt">Connections</string>
    <string name="dns1">DNS1</string>
    <string name="dns2">DNS2</string>
    <string name="dummy_content_description" />
    <string name="forget_network">Forget</string>
    <string name="frequency">Frequency</string>
    <string name="gateway">Gateway</string>
    <string name="ip_address">IP address</string>
    <string name="keywords_wifi">wifi wi-fi network connection</string>
    <string name="mac_address">Mac Address</string>
    <string name="netmask">Subnet Mask</string>
    <string name="please_type_passphrase">Password</string>
    <string name="security">Security</string>
    <string name="set_server">Set Server</string>
    <string name="signal_strength">Strength</string>
    <string name="start_sync">Start Sync</string>
    <string name="status_connected">Connected</string>
    <string name="status_connecting">Connecting…</string>
    <string name="stop_sync">Stop Sync</string>
    <string name="sync_stopped">Sync stopped</string>
    <string name="toastFailed">Failed!</string>
    <string name="wifi_change_password">Change password</string>
    <string name="wifi_connect_to">Connect to %s</string>
    <string name="wifi_empty_list_wifi_off">To see available networks, turn Wi‑Fi on.</string>
    <string name="wifi_fail_to_scan">"Can't scan for networks"</string>
    <string name="wifi_failed_connect_message">Failed to connect to network</string>
    <string name="wifi_failed_forget_message">Failed to forget network</string>
    <string name="wifi_failed_save_message">Failed to save network</string>
    <string name="wifi_link_speed">Speed</string>
    <string name="wifi_not_in_range">Not in range</string>
    <string name="wifi_password_unchanged">(unchanged)</string>
    <string name="wifi_remembered">Saved</string>
    <string name="wifi_save_config">Save</string>
    <string name="wifi_security_eap">802.1x EAP</string>
    <string name="wifi_security_ieee8021x">IEEE8021X</string>
    <string name="wifi_security_none">None</string>
    <string name="wifi_security_open">Open</string>
    <string name="wifi_security_psk_generic">@string/wifi_security_wpa_wpa2</string>
    <string name="wifi_security_short_eap">802.1x</string>
    <string name="wifi_security_short_psk_generic">@string/wifi_security_short_wpa_wpa2</string>
    <string name="wifi_security_short_wep">WEP</string>
    <string name="wifi_security_short_wpa">WPA</string>
    <string name="wifi_security_short_wpa2">WPA2</string>
    <string name="wifi_security_short_wpa_wpa2">WPA/WPA2</string>
    <string name="wifi_security_wep">WEP</string>
    <string name="wifi_security_wpa">WPA</string>
    <string name="wifi_security_wpa2">WPA2</string>
    <string name="wifi_security_wpa_eap">WPA-EAP</string>
    <string name="wifi_security_wpa_wpa2">WPA/WPA2 PSK</string>
    <string name="wifi_settings">Wi‑Fi</string>
    <string name="wifi_show_password">Show password.</string>
    <string name="wifi_signal_0">Poor</string>
    <string name="wifi_signal_1">Fair</string>
    <string name="wifi_signal_2">Good</string>
    <string name="wifi_signal_3">Excellent</string>
    <string name="wifi_ssid">Network name</string>
    <string name="wifi_status">Status</string>
    <string name="wifi_stopping">Turning off Wi‑Fi…</string>
</resources>
